--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,4 @@
-# Default values for sparkhs-chart.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Default values for spark-hs-chart.
 
 replicaCount: 1
 
