--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "spark-hs.fullname" . }}-test-connection"
+  name: "{{ include "spark-hs.name" . }}-test-connection"
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
   annotations:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "spark-hs.fullname" . }}:{{ .Values.service.externalPort }}']
+      args: ['{{ include "spark-hs.name" . }}:{{ .Values.service.externalPort }}']
   restartPolicy: Never
