--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "spark-hs.fullname" . }}
+  name: {{ include "spark-hs.name" . }}
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 spec:
@@ -47,6 +47,9 @@ spec:
             - name: config-volume
               mountPath: /opt/spark/conf/spark-defaults.conf
               subPath: spark-defaults.conf
+            - name: keystore-volume
+              mountPath: /mnt/secrets
+              readOnly: true
           ports:
             - name: http
               containerPort: {{ .Values.service.internalPort }}
@@ -56,7 +59,15 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: {{ template "spark-hs.fullname" . }}-spark-hs-config
+            name: {{ template "spark-hs.name" . }}-config
+        - name: keystore-volume
+          secret:
+            secretName: {{ include "spark-hs.name" }}-keystore
+            items:
+            - key: keystore.jks
+              path: keystore.jks
+            - key: truststore.jks
+              path: truststore.jks
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
