--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "spark-hs.fullname" . }}
+  name: {{ include "spark-hs.name" . }}
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 spec:
@@ -10,7 +10,6 @@ spec:
     - port: {{ .Values.service.externalPort }}
       targetPort: {{ .Values.service.internalPort }}
       protocol: TCP
-      name: http
-      # or should it be {{ .Chart.Name }}
+      name: https
   selector:
     {{- include "spark-hs.selectorLabels" . | nindent 4 }}
