--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
               mountPath: /mnt/secrets
               readOnly: true
           ports:
-            - name: http
+            - name: https
               containerPort: {{ .Values.service.internalPort }}
               protocol: TCP
           resources:
@@ -62,7 +62,7 @@ spec:
             name: {{ template "spark-hs.name" . }}-config
         - name: keystore-volume
           secret:
-            secretName: {{ include "spark-hs.name" }}-keystore
+            secretName: {{ include "spark-hs.name" . }}-keystore
             items:
             - key: keystore.jks
               path: keystore.jks
