--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "spark-hs.name" }}-keystore
-  namespace: {{ Release.Namespace }}
+  name: {{ include "spark-hs.name" . }}-keystore
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 data:
