--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "spark-hs.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
