--- a/values.yaml
+++ b/values.yaml
@@ -1,5 +1,5 @@
 # Default values for spark-hs-chart.
-
+#
 replicaCount: 1
 
 image:
@@ -31,6 +31,12 @@ s3endpoint: ''
 s3accessKey: ''
 s3secretKey: ''
 s3logDirectory: ''
+
+secrets:
+  keystoreBase64: ''
+  keystorePassword: ''
+  truststoreBase64: ''
+  truststorePassword: 'changeit'
 
 service:
   externalPort: 18080
