--- a/argo/spark-hs-argo.yaml
+++ b/argo/spark-hs-argo.yaml
@@ -22,9 +22,17 @@ spec:
          value: "s3a://spark/spark-logs"
        - name: service.type
          value: "LoadBalancer"
+       - name: secrets.keystoreBase64
+         value: "$KEYSTORE_BASE64"
+       - name: secrets.keystorePassword
+         value: "$KEYSTORE_PASSWD"
+       - name: secrets.truststoreBase64
+         value: "$TRUSTSTORE_BASE64"
+       - name: secrets.truststorePassword
+         value: "$TRUSTSTORE_PASSWD"
     chart: spark-hs
     repoURL: https://tcarland.github.io/spark-hs-chart/
-    targetRevision: 0.3.7
+    targetRevision: 0.3.8
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
