--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "spark-hs.fullname" . }}
+  name: {{ include "spark-hs.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - name: http
       protocol: TCP
-      name: http
-      # or should it be {{ .Chart.Name }}
+      port: {{ .Values.service.externalPort }}
+      targetPort: {{ .Values.service.internalPort }}
   selector:
     {{- include "spark-hs.selectorLabels" . | nindent 4 }}
