--- a/values.yaml
+++ b/values.yaml
@@ -31,6 +31,7 @@ s3endpoint: ''
 s3accessKey: ''
 s3secretKey: ''
 s3logDirectory: ''
+s3disableCertChecking: false
 
 secrets:
   keystoreBase64: ''
