--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: spark-hs
-description: A Helm chart for the Spark History Server
+description: A Helm Chart for the Spark History Server
 type: application
-version: 0.4.0
+version: 0.4.1
 appVersion: 3.2.0
