--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: tarland/spark
-  tag: v3.2.0-dione-2111.07
+  tag: v3.2.0-leda-2201.20
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
