--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: tarland/spark
-  tag: v3.2.1-sinope-2202.06
+  tag: v3.2.1-callisto-2202.06
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
