--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.1-callisto-2202.06
+  tag: v3.2.1-dione-2204.01
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
