--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.1-thebe-2204.10
+  tag: v3.2.1-phobos-2205.01
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
