--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.1-iocaste-2205.10
+  tag: v3.2.1-rhea-2205.20
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
