--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.1-dione-2206.01
+  tag: v3.2.1-thebe-2206.10
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
