--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.1-cyllene-2207.10
+  tag: v3.2.1-callisto-2207.15
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
