--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.2-phobos-2207.30
+  tag: v3.2.2-dione-2209.02
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
