--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.2.2-phobos-2210.20
+  tag: v3.3.1-aegir-2210.28
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
