--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.1-rhea-2211.20
+  tag: v3.3.1_2.12-dione-2301.13
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
