--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.1_2.12-tethys-2301.25
+  tag: v3.3.1_2.12-thebe-2302.22
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
