--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.2_2.12-io-2307.07
+  tag: v3.3.2_2.12-cyllene-2307.16
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
