--- a/values.yaml
+++ b/values.yaml
@@ -1,10 +1,10 @@
-# Default values for spark-hs-chart.
+b# Default values for spark-hs-chart.
 #
 replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.3_2.13-iocaste-2308.20
+  tag: v3.3.3_2.13-iocaste-2308.23
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
