--- a/.github/workflows/helm_lint.yaml
+++ b/.github/workflows/helm_lint.yaml
@@ -4,7 +4,7 @@ on:
   push:
     tags: [ "v*" ] 
   pull_request:
-    branches: [ "master", "v0.8.7" ]
+    branches: [ "master" ]
 
 jobs:
   lint-test:
