--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.3_2.13-rhea-2308.25
+  tag: v3.3.3-tethys-2309.29
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
