sync minor workflow updates

--- a/.github/workflows/helm_lint.yaml
+++ b/.github/workflows/helm_lint.yaml
@@ -1,4 +1,4 @@
-name: Lint and Test Charts
+name: Helm Lint and Test
 
 on:
   push:
@@ -15,17 +15,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Helm
+      - name: Setup Helm
         uses: azure/setup-helm@v3
         with:
           version: v3.12.1
 
-      - uses: actions/setup-python@v4
+      - name: Setup Python3
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
           check-latest: true
 
-      - name: Set up chart-testing
+      - name: Setup chart-testing-action
         uses: helm/chart-testing-action@v2.4.0
 
       - name: Run chart-testing (list-changed)
