--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.3-phobos-2312.20
+  tag: v3.3.4-dione-2401.28
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
