--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.1-thebe-2403.03
+  tag: v3.5.1-elara-2403.12
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
