--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.3.4-tethys-2402.18
+  tag: v3.5.1-elara-2403.12
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
