--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.1-iocaste-2405.05
+  tag: v3.5.1-tethys-2406.03
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
