--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.1-callisto-2407.30
+  tag: v3.5.2-phobos-2408.16
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
