--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.2-dione-2409.24
+  tag: v3.5.3-tethys-2410.05
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
