--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.5-dione-2503.15
+  tag: v3.5.5-tethys-2503.24
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
