--- a/templates/keystore-secret.yaml
+++ b/templates/keystore-secret.yaml
@@ -7,5 +7,5 @@ metadata:
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 data:
-  keystore.jks: "{{ .Values.secrets.keystoreBase64 }}"
-  truststore.jks: "{{ .Values.secrets.truststoreBase64 }}"
+  keystore.jks: |-
+    "{{ .Files.Get .Values.secrets.keystoreFile | b64enc }}"
