--- a/templates/spark-configmap.yaml
+++ b/templates/spark-configmap.yaml
@@ -28,7 +28,7 @@ data:
     spark.hadoop.fs.s3a.socket.recv.buffer=65536
     spark.hadoop.fs.s3a.socket.send.buffer=65536
     spark.hadoop.fs.s3a.threads.max=2048
-    {{- if .Values.secrets.keystoreBase64 }}
+    {{- if .Values.secrets.keystoreFile }}
     spark.ssl.historyServer.port={{ .Values.service.internalPort }}
     spark.ssl.historyServer.enabled=true
     spark.ssl.historyServer.protocol=TLSv1.2
@@ -36,7 +36,7 @@ data:
     spark.ssl.historyServer.keyStorePassword={{ .Values.secrets.keystorePassword }}
     spark.ssl.historyServer.keyStoreType=JKS
     {{- end }}
-    {{- if .Values.secrets.truststoreBase64 }}
+    {{- if .Values.secrets.truststoreFile }}
     spark.ssl.historyServer.trustStore=/mnt/secrets/truststore.jks
     spark.ssl.historyServer.trustStorePassword={{ .Values.secrets.truststorePassword }}
     spark.ssl.historyServer.trustStoreType=JKS
