--- a/resources/spark-hs-argo.yaml
+++ b/resources/spark-hs-argo.yaml
@@ -22,17 +22,17 @@ spec:
          value: "s3a://spark/spark-logs"
        - name: service.type
          value: "LoadBalancer"
-       - name: secrets.keystoreBase64
-         value: "$KEYSTORE_BASE64"
+       - name: secrets.keystoreFile
+         value: "$KEYSTORE_FILE"
        - name: secrets.keystorePassword
          value: "$KEYSTORE_PASSWD"
-       - name: secrets.truststoreBase64
-         value: "$TRUSTSTORE_BASE64"
+       - name: secrets.truststoreFile
+         value: "$TRUSTSTORE_FILE"
        - name: secrets.truststorePassword
          value: "$TRUSTSTORE_PASSWD"
     chart: spark-hs
     repoURL: https://tcarland.github.io/spark-hs-chart/
-    targetRevision: 1.2.9
+    targetRevision: 1.3.0
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
