fix to not include empty secrets

--- a/templates/keystore-secret.yaml
+++ b/templates/keystore-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.secrets.keystoreFile }}
 ---
 apiVersion: v1
 kind: Secret
@@ -9,3 +10,4 @@ metadata:
 data:
   keystore.jks: |-
     "{{ .Files.Get .Values.secrets.keystoreFile | b64enc }}"
+{{- end }}
