--- a/templates/truststore-secret.yaml
+++ b/templates/truststore-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.secrets.truststoreFile }}
 ---
 apiVersion: v1
 kind: Secret
@@ -9,3 +10,4 @@ metadata:
 data:
   truststore.jks: |-
     "{{ .Files.Get .Values.secrets.truststoreFile | b64enc }}"
+{{- end }}
