--- a/templates/truststore-secret.yaml
+++ b/templates/truststore-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.secrets.truststoreFile }}
+{{- if .Values.ssl.truststoreFile }}
 ---
 apiVersion: v1
 kind: Secret
@@ -9,5 +9,5 @@ metadata:
     {{- include "spark-hs.labels" . | nindent 4 }}
 data:
   truststore.jks: |-
-    "{{ .Files.Get .Values.secrets.truststoreFile | b64enc }}"
+    "{{ .Files.Get .Values.ssl.truststoreFile | b64enc }}"
 {{- end }}
