--- a/templates/keystore-secret.yaml
+++ b/templates/keystore-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ssl.keystoreFile }}
 ---
 apiVersion: v1
 kind: Secret
@@ -8,4 +9,5 @@ metadata:
     {{- include "spark-hs.labels" . | nindent 4 }}
 data:
   keystore.jks: |-
-    "{{ .Files.Get .Values.secrets.keystoreFile | b64enc }}"
+    "{{ .Files.Get .Values.ssl.keystoreFile | b64enc }}"
+{{- end }}
