spark image update; fix secret handling

--- a/templates/keystore-secret.yaml
+++ b/templates/keystore-secret.yaml
@@ -8,6 +8,6 @@ metadata:
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 data:
-  keystore.jks: |-
-    "{{ .Files.Get .Values.ssl.keystoreFile | b64enc }}"
+  keystore.jks: |
+    {{ .Files.Get .Values.ssl.keystoreFile | b64enc }}
 {{- end }}
