--- a/templates/truststore-secret.yaml
+++ b/templates/truststore-secret.yaml
@@ -8,6 +8,6 @@ metadata:
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 data:
-  truststore.jks: |-
-    "{{ .Files.Get .Values.ssl.truststoreFile | b64enc }}"
+  truststore.jks: |
+    {{ .Files.Get .Values.ssl.truststoreFile | b64enc }}
 {{- end }}
