--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.5-elara-2504.25
+  tag: v3.5.5-io-2505.01
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
