--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.6-callisto-2506.06
+  tag: v3.5.6-phobos-2507.01
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
