--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.6-phobos-2507.01
+  tag: v3.5.6-iocaste-2507.17
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
