--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v3.5.6-rhea-2508.15
+  tag: v4.0.1-dione-2509.15
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
