--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v4.0.1-dione-2509.15
+  tag: v4.0.1-tethys-2509.25
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
