--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "spark-hs.name" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "spark-hs.labels" . | nindent 4 }}
 spec:
