--- a/templates/spark-configmap.yaml
+++ b/templates/spark-configmap.yaml
@@ -2,6 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: {{ template "spark-hs.name" . }}-config
+  namespace: {{ .Release.Namespace }}
 data:
   spark-defaults.conf: |-
     spark.authenticate=false
