spark image update fix test template image tag

--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   containers:
     - name: wget
-      image: busybox
+      image: busybox:1.31.1
       command: ['wget']
       args: ['{{ include "spark-hs.name" . }}:{{ .Values.service.externalPort }}']
   restartPolicy: Never
