--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v4.0.1-thebe-2510.30
+  tag: v4.0.1-elara-2512.15
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
