--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v4.1.0-elara-2512.20
+  tag: v4.1.0-io-2512.30
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
