--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v4.1.0-io-2512.30
+  tag: v4.1.1-cyllene-2601.10
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
