--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/tcarland/spark
-  tag: v4.1.1-iocaste-2602.12
+  tag: v4.1.1-rhea-2602.20
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
